Fix aria-pressed of IconButton and scroll of lobby on mobile

--- a/app/javascript/pawoo_music/components/timeline/timeline.scss
+++ b/app/javascript/pawoo_music/components/timeline/timeline.scss
@@ -63,8 +63,6 @@
     background-color: var(--color2);
 
     .scrollable {
-      overflow: visible;
-
       .item-list {
         padding: var(--padding30);
 
